# Detectron-windows

./: README.md
Caffe2Python/: CMakeLists.txt  README.md  test_net.py
Caffe2Python/caffe2/: CMakeLists.txt
Caffe2Python/caffe2/proto/: caffe2.pb.cc  caffe2.pb.h  caffe2.proto  caffe2_legacy.pb.cc  caffe2_legacy.pb.h  caffe2_legacy_pb2.py  caffe2_pb2.py  command.txt  hsm.pb.cc  hsm.pb.h  hsm_pb2.py  metanet.pb.cc  metanet.pb.h  metanet_pb2.py  predictor_consts.pb.cc  predictor_consts.pb.h  predictor_consts_pb2.py  prof_dag.pb.cc  prof_dag.pb.h  prof_dag_pb2.py
Caffe2Python/caffe2/python/: CMakeLists.txt  caffe2_pybind11_state_gpu.rar  muji.py  pybind_state.cc  pybind_state.h  pybind_state_dlpack.h
Caffe2Python/detectron/utils/: cython_bbox.c  cython_nms.c  subprocess.py
Caffe2Python/nms/: cpu_nms.pyx  gpu_nms.pyx
Caffe2Python/tools/: CMakeLists.txt  infer.py  infer_simple.py  test_net.py  train_net.py  visualize_results.py
Caffe2Python/utils/: cython_bbox.c  cython_nms.c  net.py
